<resources>
    <string name="pokeapp_app_name" translatable="false">PokeMax</string>
    <string name="pokeapp_height">Height</string>
    <string name="pokeapp_weight">Weight</string>
    <string name="pokeapp_stats_title">Base Stats</string>
    <string name="pokeapp_error">Something went wrong</string>
    <string name="pokeapp_retry">Retry</string>
    <string name="pokeapp_no_evolutions">No evolutions</string>
    <string name="pokeapp_legendary"> Legendary </string>
    <string name="pokeapp_baby"> Baby </string>
    <string name="pokeapp_mythic"> Mythic </string>
    <string name="pokeapp_set_as_favorite">Set as favorite</string>
    <string name="pokeapp_egg_groups">Egg Groups</string>
    <string name="pokeapp_growth_rate">Growth Rate</string>
    <string name="pokeapp_gender_rate">Gender</string>
    <string name="pokeapp_capture_rate">Capture Rate</string>
    <string name="pokeapp_base_happiness">Base happiness</string>
    <string name="pokeapp_happiness">Happiness</string>
    <string name="pokeapp_hatch_counter">Hatch Counter</string>
    <string name="pokeapp_generation">Generation</string>
    <string name="pokeapp_habitat">Habitat</string>
    <string name="pokeapp_others">Others</string>
    <string name="pokeapp_breeding">Breeding</string>
    <string name="pokeapp_training">Training</string>
    <string name="pokeapp_catch_rate">Catch Rate</string>
    <string name="pokeapp_base_experience">Base Exp.</string>
    <string name="pokeapp_egg_cycles">Egg Cycles</string>
    <string name="pokeapp_filter">Done</string>
    <string name="pokeapp_select_generations">Filter by generation</string>
    <string name="pokeapp_select_category">Filter by category</string>
    <string name="pokeapp_select_types">Filter by type</string>
    <string name="pokeapp_clear_filters"><![CDATA[Clear filters >]]></string>
    <string name="pokeapp_evolutions_tab">EVOLUTIONS</string>
    <string name="pokeapp_stats_tab">STATS</string>
    <string name="pokeapp_abilities_tab">ABILITIES</string>
    <string name="pokeapp_forms_tab">FORMS</string>
    <string name="pokeapp_male">male</string>
    <string name="pokeapp_female">female</string>
    <string name="pokeapp_genderless">Genderless</string>
    <string name="pokeapp_steps">steps</string>
    <string name="pokeapp_held">Held</string>
    <string name="pokeapp_in">in</string>
    <string name="pokeapp_known">Known</string>
    <string name="pokeapp_beauty">Beauty</string>
    <string name="pokeapp_affection">Affection</string>
    <string name="pokeapp_needs_over_world_rain">Needs over world rain</string>
    <string name="pokeapp_move">move</string>
    <string name="pokeapp_attack">Attack</string>
    <string name="pokeapp_defense">Defense</string>
    <string name="pokeapp_at">at</string>
    <string name="pokeapp_gender">Gender</string>
    <string name="pokeapp_if">If</string>
    <string name="pokeapp_search_hint">"Search by name or id"</string>
    <string name="pokeapp_empty_state">"No results"</string>
    <string name="pokeapp_detail_error_message">There was an error loading the pokemon data</string>
    <string name="pokeapp_list_error_message">There was an error loading the pokemon list</string>
    <string name="pokeapp_app_dev" translatable="false">IusLegis</string>
    <string name="pokeapp_contact">Contact us</string>
    <string name="pokeapp_github" translatable="false">Github</string>
    <string name="pokeapp_pokeapi" translatable="false">Pokeapi</string>
    <string name="pokeapp_disclaimer">Nintendo, Pokémon and all other names and images are property of Nintendo Company, Ltd., Creatures Inc. and GameFreak</string>
    <string name="pokeapp_contact_message">"Choose an Email client :"</string>

    <string-array name="pokeapp_types">
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
    </string-array>
    <string-array name="pokeapp_generations">
        <item>Any</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
