<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pokeapp_black"
        android:text="@string/pokeapp_select_types"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/types_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pokeapp_black"
        android:text="@string/pokeapp_select_generations"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/gen_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokeapp_filter"/>

</LinearLayout>