<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".presentation.about.AboutActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/pokeapp_app_name"
        android:textStyle="bold"
        android:textColor="@color/pokeapp_black" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="v0.1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pokeapp_app_dev" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contact_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:background="@drawable/pokeapp_solid_rounded_corner"
        android:textColor="@color/pokeapp_white"
        android:backgroundTint="@color/pokeapp_button_blue"
        android:drawableStart="@drawable/pokeapp_ic_email"
        android:drawableEnd="@drawable/pokeapp_ic_email"
        android:drawableTint="@color/pokeapp_white"
        android:text="@string/pokeapp_contact"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/github_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:background="@drawable/pokeapp_solid_rounded_corner"
        android:textColor="@color/pokeapp_white"
        android:backgroundTint="@color/pokeapp_button_blue"
        android:drawableStart="@drawable/pokeapp_ic_github"
        android:drawableEnd="@drawable/pokeapp_ic_github"
        android:drawableTint="@color/pokeapp_white"
        android:text="@string/pokeapp_github"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pokeapi_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:background="@drawable/pokeapp_solid_rounded_corner"
        android:textColor="@color/pokeapp_white"
        android:backgroundTint="@color/pokeapp_button_blue"
        android:drawableStart="@drawable/pokeapp_pokeball_24"
        android:drawableEnd="@drawable/pokeapp_pokeball_24"
        android:drawableTint="@color/pokeapp_white"
        android:text="@string/pokeapp_pokeapi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/pokeapp_disclaimer" />

</LinearLayout>