<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/pokeapp_breeding"/>

        <TextView
            android:id="@+id/genderRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_gender_rate"/>

        <TextView
            android:id="@+id/eggCyclesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_egg_cycles"/>

        <TextView
            android:id="@+id/eggGroupsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_egg_groups"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/pokeapp_training"/>

        <TextView
            android:id="@+id/catchRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_catch_rate"/>

        <TextView
            android:id="@+id/growthRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_growth_rate"/>

        <TextView
            android:id="@+id/baseHappinessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_base_happiness"/>

        <TextView
            android:id="@+id/baseExperienceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/pokeapp_grey"
            android:text="@string/pokeapp_base_experience"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/genderRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="gender rate"/>

        <TextView
            android:id="@+id/eggCycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="cycles"/>

        <TextView
            android:id="@+id/eggGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="monster"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/catchRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="catch rate"/>

        <TextView
            android:id="@+id/growthRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="growth rate"/>

        <TextView
            android:id="@+id/baseHappiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="base happiness"/>

        <TextView
            android:id="@+id/baseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            tools:text="base experience"/>

    </LinearLayout>

</LinearLayout>