<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by dariel94 on 30/5/22 14:59
  ~ Last modified 30/5/22 14:59
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filterViewBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pokeapp_black"
                android:textSize="16sp"
                android:text="@string/pokeapp_select_types"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/types_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pokeapp_black"
                android:textSize="16sp"
                android:text="@string/pokeapp_select_generations"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/gen_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pokeapp_black"
                android:textSize="16sp"
                android:text="@string/pokeapp_select_category"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cat_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pokeapp_solid_rounded_corner"
                android:textColor="@color/pokeapp_white"
                android:backgroundTint="@color/pokeapp_button_blue"
                android:text="@string/pokeapp_filter"/>



        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>